--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,5 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-lib_deps = ArduinoJson, PubSubClient, WS2812FX
+lib_deps = ArduinoJson@5.13.1, PubSubClient, WS2812FX
 monitor_baud = 115200
