--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,4 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 lib_deps = ArduinoJson@5.13.1, PubSubClient, WS2812FX
-monitor_baud = 115200
+monitor_speed = 115200
